# todo

./: CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: colours.hpp  helper.cpp  helper.hpp
src/: optionsmenu.cpp  optionsmenu.hpp  taskdata.cpp  taskdata.hpp  taskloader.cpp  taskloader.hpp  tasksaver.cpp  tasksaver.hpp  todomanager.cpp  todomanager.hpp
